tdf#114460 vcl: handle nested parentheses in PDF roundtrip

The roundtrip of the pdf image failed due to this.

Change-Id: I88a9657e242dd2659f9bf06233e5fcbfeb43ceb5